--- a/skyfolk/static/sass/profile.sass
+++ b/skyfolk/static/sass/profile.sass
@@ -818,7 +818,8 @@ $followcolor: #64b5f6
   overflow-x: hidden
 
 .unstyled.content
-  height: 1175px
+  height: auto
+  min-height: 1175px
 
 #div-separator
   height: 870px
