--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -194,7 +194,7 @@ if(requests){
                     $('#tab-amigos').endlessPaginate({
                         paginateOnScroll: true,
                         paginateOnScrollMargin: 20,
-                        id: 'tab-amigos'
+                        id: '#tab-amigos'
                     });
                 </script>
             {% endblock %}
