--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -683,7 +683,7 @@ a.fontawesome-cog:hover {
 
 #tab-comentarios .no-comments, #tab-messages .no-comments {
     width: 100%;
-    height: 20%;
+    height: 300px;
     position: relative;
     display: block;
     border-bottom: 5px solid #eee;
