--- a/skyfolk/static/css/profile.css
+++ b/skyfolk/static/css/profile.css
@@ -811,7 +811,8 @@
   overflow-x: hidden; }
 
 .unstyled.content {
-  height: 1175px; }
+  height: auto;
+  min-height: 1175px; }
 
 #div-separator {
   height: 870px; }
