--- a/skyfolk/templates/account/profile_comments.html
+++ b/skyfolk/templates/account/profile_comments.html
@@ -179,6 +179,18 @@
                 <ul class="children">
                     {{ children }}
                 </ul>
+                <div class="row">
+                    <div class="col s12">
+                        <a class="waves-effect waves-light btn-large blue darken-1 white-text center" href="#"
+                           id="load_more_publications"
+                           data-id="{{ node.id }}"><i class=" material-icons left">expand_more</i>Cargar
+                            comentarios ({{ node.get_descendant_count }})</a>
+                        <div>
+                            <img id="load_publications_image" src="{{ STATIC_URL }}img/ripple.gif" title="Loading..."
+                                 alt="Loading..." style="display: none;">
+                        </div>
+                    </div>
+                </div>
             {% endif %}
         </div>
     {% endrecursetree %}
