+ V6 + Publicaciones recursivas hasta nivel 2 + Pedir mas publicaciones

--- a/skyfolk/templates/account/profile_comments.html
+++ b/skyfolk/templates/account/profile_comments.html
@@ -184,7 +184,8 @@
                         <a class="waves-effect waves-light btn-large blue darken-1 white-text center" href="#"
                            id="load_more_publications"
                            data-id="{{ node.id }}"><i class=" material-icons left">expand_more</i>Cargar
-                            comentarios ({{ node.get_descendant_count }})</a>
+                            comentarios ({% if not node.is_root_node %}{{ node.get_descendant_count }}{% else %}
+                                {{ node.get_children_count }}{% endif %})</a>
                         <div>
                             <img id="load_publications_image" src="{{ STATIC_URL }}img/ripple.gif" title="Loading..."
                                  alt="Loading..." style="display: none;">
