+ V6 + Paginacion funcionando + en comentarios (al hacer clic en cargar mas comentarios

--- a/skyfolk/templates/account/profile_comments.html
+++ b/skyfolk/templates/account/profile_comments.html
@@ -119,12 +119,27 @@
                         </ul>
                         <div class="row">
                             <div class="col s12">
-                                <a class="waves-effect waves-light btn-large blue darken-1 white-text center" href="#"
-                                   id="load_more_publications"
-                                   data-id="{{ node.id }}"><i class=" material-icons left">expand_more</i>Cargar
-                                    comentarios ({% if not node.is_root_node %}
-                                        {{ node.get_descendant_count }}{% else %}
-                                        {{ node.get_children_count }}{% endif %})</a>
+                                {% if not node.is_root_node %}
+                                    {% with node.get_descendant_count as descendants %}
+                                        {% if descendants > 0 %}
+                                            <a class="waves-effect waves-light btn-large blue darken-1 white-text center"
+                                               href="#"
+                                               id="load_more_publications"
+                                               data-id="{{ node.id }}"><i class=" material-icons left">expand_more</i>Cargar
+                                                comentarios ({{ descendants }})</a>
+                                        {% endif %}
+                                    {% endwith %}
+                                {% else %}
+                                    {% with node.get_children_count as descendants %}
+                                        {% if descendants > 8 %}
+                                            <a class="waves-effect waves-light btn-large blue darken-1 white-text center"
+                                               href="#"
+                                               id="load_more_publications"
+                                               data-id="{{ node.id }}"><i class=" material-icons left">expand_more</i>Cargar
+                                                comentarios ({{ descendants|add:"-9" }})</a>
+                                        {% endif %}
+                                    {% endwith %}
+                                {% endif %}
                                 <div>
                                     <img id="load_publications_image" src="{{ STATIC_URL }}img/ripple.gif"
                                          title="Loading..."
