+ V6 + Boton añadido cuando el scroll falle, cargar comentarios a traves de el

--- a/skyfolk/templates/account/profile_comments.html
+++ b/skyfolk/templates/account/profile_comments.html
@@ -158,7 +158,11 @@
     {% with publications|last as last_pub %}
         <div class="row" id="loader_skyline">
             <div class="col s12">
-                <input id="load_more_skyline" type="hidden" value="{{ last_pub.0.id }}">
+                <a class="waves-effect waves-light btn-large blue darken-1 white-text center"
+                   href="#"
+                   id="load_more_skyline"
+                   data-id="{{ last_pub.0.id }}"><i class=" material-icons left">expand_more</i>Cargar
+                    comentarios</a>
                 <div>
                     <img id="load_publications_image" src="{{ STATIC_URL }}img/ripple.gif"
                          title="Loading..."
