--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -219,7 +219,7 @@ if(requests){
             {% if user_profile.id == request.user.id %}
                 <script>
                     function addItemToFriendList(name, lastname, username, avatar_url) {
-                        $("#tab-amigos").find("ul").append('<li><img src="' + avatar_url + '" alt="' + username + '" width="120" height="120"><a>' + name + ' ' + lastname + (username) + '</a></li>');
+                        $("#tab-amigos").find("ul").append('<li><img src="' + avatar_url + '" alt="' + username + '" width="120" height="120"><a>' + name + ' ' + lastname + ' (' + username + ')</a></li>');
                     }
                 </script>
             {% endif %}
