--- a/skyfolk/static/sass/gallery.sass
+++ b/skyfolk/static/sass/gallery.sass
@@ -20,6 +20,9 @@ $eocolor: #e0e0e0
     left: 0
     z-index: 9998
     display: none
+    button
+      margin-right: 10px
+
   .endless_more, .endless_loading
     clear: both
     text-align: center
