--- a/skyfolk/static/sass/photo_detail.sass
+++ b/skyfolk/static/sass/photo_detail.sass
@@ -13,6 +13,10 @@ $blueskyfolk: #1e88e5
     & .photo-body
       box-shadow: $boxshadow
       text-align: center
+      .responsive-img
+        height: 120px
+        width: 120px
+        border: 2px solid $blueskyfolk
     & .photo-details
       background-color: $greylightcolor
       display: block
