--- a/photologue/templates/photologue/photo_gallery.html
+++ b/photologue/templates/photologue/photo_gallery.html
@@ -90,7 +90,7 @@
                         <button class="waves-effect waves-light btn blue darken-1 right" type="submit">Subir
                             <i class="material-icons right">file_upload</i>
                         </button>
-                        <button id="close_upload_form" class="waves-effect waves-light btn right transparent black-text"
+                        <button id="close_upload_form" class="waves-effect waves-light btn right transparent black-text btn-close"
                                 type="button">Cerrar
                             <i class="material-icons right">close</i>
                         </button>
