--- a/skyfolk/templates/account/profile_comments.html
+++ b/skyfolk/templates/account/profile_comments.html
@@ -26,7 +26,7 @@
                         <div class="row">
                             <div class="articulo col s12">
                                 <div class="row">
-                                    <div class="image col l1 m2 s2">
+                                    <div class="image col l1 m2 s2" {% if user.is_authenticated and user.username == node.author.username or user.is_authenticated and user.username == user_profile.username %}title="¡Eres el autor!" style="box-shadow: 0 1px 5px rgba(129, 199, 132, 1);"{% endif %}>
                                         <div class="usr-img img-responsive">{% avatar node.author %}</div>
                                     </div>
                                     <div class="col l8 m12 s8">
