+ V6 + Mejoras en skyline, añadir me gusta, añadir hate, nuevos botones...

--- a/skyfolk/templates/account/notification-right-menu.html
+++ b/skyfolk/templates/account/notification-right-menu.html
@@ -62,7 +62,7 @@ Menu de notificaciones verticales
                 <a id="clear-notify"
                    class="waves-effect waves-light btn white-text blue darken-1 nav-button-notifications">Limpiar</a>
                 {% endif %}
-                <a href="/inbox/notifications/" id="clear-notify"
+                <a href="/inbox/notifications/"
                    class="waves-effect waves-light btn white-text blue darken-1 nav-button-notifications">Todas</a>
             </div>
         </div>
