--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -615,17 +615,10 @@ a.fontawesome-cog:hover {
     cursor: pointer;
 }
 
-.options_comentarios ul .like-comment, .quote-comment, .reply-comment, .add-timeline {
+.options_comentarios ul .like-comment, .quote-comment, .reply-comment, .add-timeline, .hate-comment, .trash-comment {
     margin-left: 3%;
 }
 
-.options_comentarios ul .fa-stack, .trash-comment {
-    margin-left: 2.5%;
-}
-
-.hate-with-values {
-    margin-right: 2.5% !important;
-}
 
 .options_comentarios ul li:hover {
     transition: all 0.1s ease-in-out;
@@ -663,11 +656,6 @@ a.fontawesome-cog:hover {
     color: #3f51b5;
 }
 
-.options_comentarios ul .fa-stack .hate-value, .wrapper-reply .reply-options ul .fa-stack .hate-value {
-    position: relative;
-    float: right;
-    left: 4px;
-}
 
 #tab-comentarios .no-comments, #tab-messages .no-comments {
     width: 100%;
@@ -753,15 +741,6 @@ a.fontawesome-cog:hover {
 
 .wrapper-reply ul .like-reply, .quote-reply, .reply-reply, .add-reply-timeline {
     margin-left: 2.5%;
-}
-
-.wrapper-reply .reply-options ul .fa-stack, .wrapper-reply .reply-options ul .del-reply {
-    margin-left: 1.25%;
-}
-
-.wrapper-reply .reply-options ul .fa-stack {
-    margin-top: 1.25%;
-    top: -4px;
 }
 
 .hate-with-values {
